--- a/.github/workflows/assigned-issue.yml
+++ b/.github/workflows/assigned-issue.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           project: Phase 1
           column: In progress
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GH_TOKEN }}
